argocd/app/readarr/base/service.yaml
---
# Source: arr/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: readarr
  labels:
    app.kubernetes.io/name: "readarr"
    app.kubernetes.io/instance: "readarr"
spec:
  type: ClusterIP
  ports:
    - port: 8787
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: "readarr"
    app.kubernetes.io/instance: "readarr"
