argocd/app/readarr/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: readarr
  labels:
    app.kubernetes.io/name: "readarr"
    app.kubernetes.io/instance: "readarr"
  annotations:
    oauth.homelab.wojoinc.xyz/namespace: media
    oauth.homelab.wojoinc.xyz/allowed-groups: Readarr-Admins
spec:
  rules:
    - host: "TO_BE_FILLED"
      http:
        paths:
          - path: "TO_BE_FILLED"
            pathType: Prefix
            backend:
              service:
                name: readarr
                port:
                  number: 8787
  tls:
    - hosts: []
      secretName: readarr-cert
